@@ -2,11 +2,11 @@
 title: AEM、CQ 和 CRX 的較舊版本
 description: 舊版 Adobe Experience Manager、CQ 和 CRX 的文件套件。
 exl-id: c210eadb-58ec-4d40-ba72-5e4b11564510
-translation-type: ht
-source-git-commit: 894a2a98b9d1a135a2f488f2167ec3302c122339
-workflow-type: ht
-source-wordcount: '773'
-ht-degree: 100%
+translation-type: tm+mt
+source-git-commit: 30feacd82cd68428b8c06044d6290f8f5328aa7a
+workflow-type: tm+mt
+source-wordcount: '793'
+ht-degree: 93%
 
 ---
 
@@ -71,13 +71,17 @@ ht-degree: 100%
 
 ### 在本機執行個體上安裝套件 {#install-package-local-instance}
 
+>[!NOTE]
+>
+>對AEM於6.2，您可能需要使用以下命令啟動本地實例：` java -jar -XX:MaxPermSize=2048m aem-author.jar`
+
 1. 開啟 [!DNL Experience Manager] 使用者介面。在網頁瀏覽器中輸入：`http://localhost:4502/`。以管理員身分登入。
 
 1. 選取&#x200B;**[!UICONTROL 工具]** > **[!UICONTROL 部署]** > **[!UICONTROL 套件]**。
 
 1. 在套件管理程式 UI 中，選取&#x200B;**[!UICONTROL 上傳套件]**。
 
-1. 瀏覽至下載 AEM 5.6.1 套件 (aem-docs-5-6-1.zip) 的位置。
+1. 瀏覽至您下載套件的位AEM置。
 
 1. 選取該套件，然後按一下&#x200B;**[!UICONTROL 確定]**。
 
@@ -87,7 +91,7 @@ ht-degree: 100%
 
 1. 在確認對話方塊中，再次選取&#x200B;**[!UICONTROL 安裝]**。注意：安裝需要幾分鐘時間。
 
-1. 在網頁瀏覽器中，啟動說明文件頁面。以 AEM 5.6.1 當作範例，URL 會是：http://localhost:4502/libs/aem-docs/content/en/cq/5-6-1.html。
+1. 在網頁瀏覽器中，啟動說明文件頁面。使用AEM5.6.1範例時，URL會是：http://localhost:4502/libs/aem-docs/content/en/cq/5-6-1.html。
 
 ## 取得 [!DNL Experience Manager] 社群的協助 {#get-help-from-aem-community}
 
